[project]
name = "image-enhance"
version = "0.1.0"
description = "Local AI image enhancement tools (upscaling, sharpening, face restoration)"
requires-python = ">=3.11"
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "numpy<2",
    "basicsr==1.4.2",
    "facexlib==0.3.0",
    "gfpgan==1.3.8",
    "realesrgan==0.3.0",
    "opencv-python==4.13.0.92",
]
