[project]
name = "image-enhance"
version = "0.1.0"
description = "Local AI image enhancement tools (upscaling, sharpening, face restoration)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.0.1,<2.2",
    "torchvision>=0.15.2,<0.17",
    "numpy<2",
    "basicsr==1.4.2",
    "facexlib==0.3.0",
    "gfpgan==1.3.8",
    "realesrgan==0.3.0",
    "opencv-python>=4.8,<4.10",
]
